fix overflow content

--- a/_frontend/dev/sass/modules/_breadcrumb.scss
+++ b/_frontend/dev/sass/modules/_breadcrumb.scss
@@ -174,36 +174,42 @@ $bread_separator    : '';
 --------------------------------------------------------------------------- */
 
 .dropship-steps {
-    list-style-position: inside;
-    li {
+    li {         
+        vertical-align:top;
+        min-height: 75px;
         @include animate-transition(.15s);
         padding: 20px;
         display: inline-block;
         background: $black20;
         width: 80%;
+        min-height: 105px;
         margin-bottom: 10px;
+        margin-right: 40px;
         @media #{$medium} {
-            width: 23%;
+            width: 40%;vertical-align:top;
+        }
+        @media #{$large} {
+            width: 20%;
+            margin-right: 0px;
         }
         position: relative;
-        h3 {
+        b {
             color: $darkorange;
             font-family: Lato, Arial, Verdana;
-            letter-spacing: 1px;
+            letter-spacing: .5px;
             font-weight: bold;
-            font-size: 1em;
-            @media #{$medium} {
-                font-size: 1.5em;
-            }
-            margin: 0 0 15px 0;
+            font-size: 1.25em !important;
+            margin: 0 0 10px 0;
         }
-        p {
+        .dropship-steps__description {
             margin: 0;
+            display: block;
+            font-size: 1em !important;                                                                              
         }
         &:hover {
             cursor: pointer;
             background: $orange;
-            h3 {
+            b {
                 color: white;
             }
             &:after {
